fix media queries and shift text down on smaller devices

--- a/website/static/css/terra-docs-theme.css
+++ b/website/static/css/terra-docs-theme.css
@@ -1,57 +1,5 @@
 /* Terra Documentation Theme */
 
-@media only screen and (min-device-width: 360px) and (max-device-width: 736px) {
-}
-
-@media only screen and (min-width: 1024px) {
-    .docMainWrapper.wrapper {
-        padding-left: 0;
-    }
-    
-    #docsNav {
-        padding-left: 20px;
-        padding-right: 20px;
-        background-color: #0c3694;
-        flex: 0 0 240px;
-    }
-    
-    .arrow path:first-of-type {
-        fill: #ffffff !important;
-    }
-    
-    
-    /* make sidebar titles bold */
-    
-    .toc .toggleNav ul li a {
-       color: hsla(0,0%,100%,.75);
-    }
-    
-    .toc .toggleNav .navGroup .navGroupSubcategoryTitle {
-        color: hsla(0,0%,100%,.87);
-    }
-    
-    .toc .toggleNav ul li.navListItemActive a {
-        color: #ffffff;
-    }
-    
-    .toc .toggleNav .navGroup .navGroupCategoryTitle {
-        color: #ffffff;
-        font-weight: 400 !important;
-    }
-
-    .toc .toggleNav ul li a:hover {
-        color: #ffffff;
-    }
-}
-
-@media only screen and (max-width: 1023px) {
-}
-
-@media only screen and (min-width: 1400px) {
-    .wrapper {
-        margin: 0;
-    }
-}
 
 :root {
     /* page colors */
@@ -101,6 +49,66 @@
     --bq-warning-text-color: #b30f0f;
 
 }
+
+@media only screen and (min-device-width: 360px) and (max-device-width: 736px) {
+}
+
+@media only screen and (min-width: 0px) and (max-width: 1023px) {
+    .post {
+        position: relative;
+        top: 25px;
+    }
+}
+
+@media only screen and (min-width: 1024px) {
+    .docMainWrapper.wrapper {
+        padding-left: 0;
+    }
+    
+    #docsNav {
+        padding-left: 20px;
+        padding-right: 20px;
+        background-color: #0c3694;
+        flex: 0 0 240px;
+    }
+    
+    .arrow path:first-of-type {
+        fill: #ffffff !important;
+    }
+    
+    /* make sidebar titles bold */
+    
+    .toc .toggleNav ul li a {
+       color: hsla(0,0%,100%,.75);
+    }
+    
+    .toc .toggleNav .navGroup .navGroupSubcategoryTitle {
+        color: hsla(0,0%,100%,.87);
+    }
+    
+    .toc .toggleNav ul li.navListItemActive a {
+        color: #ffffff;
+    }
+    
+    .toc .toggleNav .navGroup .navGroupCategoryTitle {
+        color: #ffffff;
+        font-weight: 400 !important;
+    }
+
+    .toc .toggleNav ul li a:hover {
+        color: #ffffff;
+    }
+}
+
+@media only screen and (max-width: 1023px) {
+}
+
+@media only screen and (min-width: 1400px) {
+    .wrapper {
+        margin: 0;
+    }
+}
+
 
 /* typography */
 
